refonte comme pas possible

--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BetterLife</title>
-  <link type="image/png" rel="shortcut icon" href="../frontend/src/images/">
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <script src="js/bootstrap.bundle.min.js" defer></script>
-  <script src="js/toast.js" defer></script>
-  <title>Better Life Ong</title>
+  <link rel="icon" type="image/png" href="/src/images/cropped-Logo-betterlife-officiel.png" />
+  <title>Better Life ONG - Protection de l'Environnement et Développement Durable</title>
 </head>
 
 <body>
