--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/png" href="/src/images/cropped-Logo-betterlife-officiel.png" />
-  <title>Better Life ONG - Protection de l'Environnement et Développement Durable</title>
+  <title>Better Life ONG - Protection de l'environement et Développement Durable</title>
 </head>
 
 <body>
